@@ -19,7 +19,6 @@ import teamkiim.koffeechat.domain.member.service.MemberService;
 import teamkiim.koffeechat.global.AuthenticatedMemberPrincipal;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -47,9 +46,9 @@ public class MemberController {
     @AuthenticatedMemberPrincipal
     @PostMapping("/enroll-profile-image")
     @MemberApiDocument.SaveProfileImage
-    public ResponseEntity<?> saveProfileImage(@RequestPart(value = "file") MultipartFile multipartFile, HttpServletRequest request) throws Exception {
+    public ResponseEntity<?> saveProfileImage(@RequestPart(value = "file") MultipartFile multipartFile, HttpServletRequest request) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         return ResponseEntity.ok(memberService.enrollProfileImage(memberId, multipartFile));
     }
@@ -60,13 +59,12 @@ public class MemberController {
     @AuthenticatedMemberPrincipal
     @PostMapping("/enroll-skills")
     @MemberApiDocument.EnrollSkills
-    public ResponseEntity<?> enrollSkills(@Valid @RequestBody List<EnrollSkillCategoryRequest> enrollSkillCategoryRequest, HttpServletRequest request) throws Exception {
+    public ResponseEntity<?> enrollSkills(@Valid @RequestBody List<EnrollSkillCategoryRequest> enrollSkillCategoryRequest, HttpServletRequest request) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         List<EnrollSkillCategoryServiceRequest> serviceRequestList = enrollSkillCategoryRequest.stream()
-                .map(EnrollSkillCategoryRequest::toServiceRequest)
-                .collect(Collectors.toList());
+                .map(EnrollSkillCategoryRequest::toServiceRequest).toList();
 
         memberService.enrollSkillCategory(memberId, serviceRequestList);
 
@@ -79,9 +77,9 @@ public class MemberController {
     @AuthenticatedMemberPrincipal
     @PatchMapping("/profile")
     @MemberApiDocument.ModifyProfile
-    public ResponseEntity<?> modifyProfile(@Valid @RequestBody ModifyProfileRequest modifyProfileRequest, HttpServletRequest request) throws Exception {
+    public ResponseEntity<?> modifyProfile(@Valid @RequestBody ModifyProfileRequest modifyProfileRequest, HttpServletRequest request) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         memberService.modifyProfile(modifyProfileRequest.toServiceRequest(), memberId);
 
@@ -97,7 +95,7 @@ public class MemberController {
     @MemberApiDocument.FindProfile
     public ResponseEntity<?> findProfile(HttpServletRequest request) throws Exception {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         return ResponseEntity.ok(memberService.findMemberInfo(null, memberId));
     }
@@ -110,7 +108,7 @@ public class MemberController {
     @MemberApiDocument.FindMemberProfile
     public ResponseEntity<?> findProfile(@PathVariable("profileMemberId") String profileMemberId, HttpServletRequest request) throws Exception {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         return ResponseEntity.ok(memberService.findMemberInfo(profileMemberId, memberId));
     }
@@ -123,7 +121,7 @@ public class MemberController {
     @MemberApiDocument.SendNewAuthEmail
     public ResponseEntity<?> sendNewAuthEmail(@Valid @RequestBody EmailAuthRequest emailAuthRequest, HttpServletRequest request) throws Exception {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         memberService.sendNewAuthEmail(memberId, emailAuthRequest.getEmail());
 
@@ -136,9 +134,9 @@ public class MemberController {
     @AuthenticatedMemberPrincipal
     @PatchMapping("/email")
     @MemberApiDocument.UpdateNewEmailApiDoc
-    public ResponseEntity<?> updateNewAuthEmail(@RequestBody String email, HttpServletRequest request) throws Exception {
+    public ResponseEntity<?> updateNewAuthEmail(@RequestBody String email, HttpServletRequest request) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         memberService.updateNewAuthEmail(memberId, email);
 
@@ -155,9 +153,9 @@ public class MemberController {
     @AuthenticatedMemberPrincipal
     @PostMapping("/password")
     @MemberApiDocument.CheckCurrentPasswordApiDoc
-    public ResponseEntity<?> checkCurrentPassword(@RequestBody CheckPasswordRequest password, HttpServletRequest request) throws Exception {
+    public ResponseEntity<?> checkCurrentPassword(@RequestBody CheckPasswordRequest password, HttpServletRequest request) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         memberService.checkCurrentPassword(memberId, password.getPassword());
 
@@ -171,9 +169,9 @@ public class MemberController {
     @PatchMapping("/password")
     @MemberApiDocument.UpdatePasswordApiDoc
     public ResponseEntity<?> updatePassword(@Valid @RequestBody UpdatePasswordRequest passwordRequest,
-                                            HttpServletRequest request, HttpServletResponse response) throws Exception {
+                                            HttpServletRequest request, HttpServletResponse response) {
 
-        String memberId = String.valueOf(request.getAttribute("authenticatedMemberPK"));
+        Long memberId = Long.valueOf(String.valueOf(request.getAttribute("authenticatedMemberPK")));
 
         memberService.updatePassword(memberId, passwordRequest);
         authService.logout(request, response);
