@@ -21,7 +21,6 @@ import teamkiim.koffeechat.global.exception.CustomException;
 import teamkiim.koffeechat.global.exception.ErrorCode;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -53,9 +52,9 @@ public class MemberService {
      * @param memberId                    사용자 PK
      */
     @Transactional
-    public void modifyProfile(ModifyProfileServiceRequest modifyProfileServiceRequest, String memberId) throws Exception {
+    public void modifyProfile(ModifyProfileServiceRequest modifyProfileServiceRequest, Long memberId) {
 
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         member.modify(modifyProfileServiceRequest.getNickname(), modifyProfileServiceRequest.getMemberRole());
@@ -68,14 +67,13 @@ public class MemberService {
      * @param enrollSkillCategoryServiceRequestList 관심 기술 dto
      */
     @Transactional
-    public void enrollSkillCategory(String memberId, List<EnrollSkillCategoryServiceRequest> enrollSkillCategoryServiceRequestList) throws Exception {
+    public void enrollSkillCategory(Long memberId, List<EnrollSkillCategoryServiceRequest> enrollSkillCategoryServiceRequestList) {
 
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         List<SkillCategory> skillCategoryList = enrollSkillCategoryServiceRequestList.stream()
-                .map(EnrollSkillCategoryServiceRequest::combine)
-                .collect(Collectors.toList());
+                .map(EnrollSkillCategoryServiceRequest::combine).toList();
 
         member.enrollSkillCategory(skillCategoryList);
     }
@@ -88,9 +86,9 @@ public class MemberService {
      * @return ProfileImageInfoResponse
      */
     @Transactional
-    public ProfileImageInfoResponse enrollProfileImage(String memberId, MultipartFile multipartFile) throws Exception {
+    public ProfileImageInfoResponse enrollProfileImage(Long memberId, MultipartFile multipartFile) {
 
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         ProfileImageInfoResponse response = fileStorageControlService.saveFile(member, multipartFile);
@@ -103,11 +101,11 @@ public class MemberService {
     /**
      * 회원 프로필 조회
      *
-     * @param profileMemberId 조회한 대상 회원의 PK
+     * @param profileMemberId 암호화되어있는 조회한 대상 회원의 PK
      * @param loginMemberId   로그인한 회원 (현재 요청을 보낸) 의 PK
      * @return MemberInfoResponse
      */
-    public MemberInfoResponse findMemberInfo(String profileMemberId, String loginMemberId) throws Exception {
+    public MemberInfoResponse findMemberInfo(String profileMemberId, Long loginMemberId) throws Exception {
 
         boolean isLoginMemberProfile = false;
         Boolean isFollowingMember = null;
@@ -115,7 +113,7 @@ public class MemberService {
 
         // 프로필 PK가 null이면 로그인한 회원 PK로 조회
         if (profileMemberId == null) {
-            profileMember = memberRepository.findById(aesCipher.decrypt(loginMemberId))
+            profileMember = memberRepository.findById(loginMemberId)
                     .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
             isLoginMemberProfile = true;
@@ -123,11 +121,11 @@ public class MemberService {
             profileMember = memberRepository.findById(aesCipher.decrypt(profileMemberId))
                     .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
-            isLoginMemberProfile = aesCipher.decrypt(loginMemberId).equals(profileMember.getId());
+            isLoginMemberProfile = loginMemberId.equals(profileMember.getId());
         }
 
         if (!isLoginMemberProfile) {
-            Member loginMember = memberRepository.findById(aesCipher.decrypt(loginMemberId))
+            Member loginMember = memberRepository.findById(loginMemberId)
                     .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
             isFollowingMember = memberFollowService.isMemberFollowed(loginMember, profileMember);
@@ -143,9 +141,9 @@ public class MemberService {
      * 사용자 이메일 변경 시 인증 메시지 전송
      */
     @Transactional
-    public void sendNewAuthEmail(String memberId, String email) throws Exception {
+    public void sendNewAuthEmail(Long memberId, String email) throws Exception {
 
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         if (member.getEmail().equals(email) || memberRepository.findByEmail(email).isPresent()) {
@@ -162,9 +160,9 @@ public class MemberService {
      * @param email    변경할 이메일
      */
     @Transactional
-    public void updateNewAuthEmail(String memberId, String email) throws Exception {
+    public void updateNewAuthEmail(Long memberId, String email) {
 
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         member.updateEmail(email);
@@ -180,8 +178,8 @@ public class MemberService {
      * @param memberId 로그인한 사용자
      * @param password 현재 비밀번호
      */
-    public void checkCurrentPassword(String memberId, String password) throws Exception {
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+    public void checkCurrentPassword(Long memberId, String password) {
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         if (!passwordEncoder.matches(password, member.getPassword())) {
@@ -196,8 +194,8 @@ public class MemberService {
      * @param passwordRequest 비밀번호 변경 요청
      */
     @Transactional
-    public void updatePassword(String memberId, UpdatePasswordRequest passwordRequest) throws Exception {
-        Member member = memberRepository.findById(aesCipher.decrypt(memberId))
+    public void updatePassword(Long memberId, UpdatePasswordRequest passwordRequest) {
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
 
         //기존 비밀번호와 동일한 비밀번호로 변경 요청
